fixed overflow

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -58,6 +58,7 @@
 
   #weather {
     grid-column: 1;
+    overflow: initial;
   }
 
   #join {
